# curl-visualizer

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  index.html  pyproject.toml  requirements.txt
static/: script.js  styles.css
templates/: index.html
